--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="right">
         <div class="image">
-            <img src="" alt="image">
+            <img src="images/photo.png" alt="image">
         </div>
             <div class="rotate-45"</div>
             <div class="rotate-minus-45"></div>
